# ocaml-by-example

./: .gitignore  .markdownlint-cli2.jsonc  .obe-progress.json  .ocaml-by-example.toml  .ocamlformat  LICENSE  Makefile  README.md  Taskfile.yml  book.toml
.github/workflows/: deploy.yml
exercises/: INTEGRATION_PROJECTS.md
exercises/appendix_a/: dune-project
exercises/appendix_b/: dune-project
exercises/appendix_c/: dune-project
exercises/chapter02/: dune-project
exercises/chapter03/: dune-project
exercises/chapter04/: dune-project
exercises/project_schema_validator/: GUIDE.md  README.md  dune-project  schema_validator.opam
exercises/project_schema_validator/lib/: dune  error.ml  schema.ml  validator.ml
exercises/project_schema_validator/test/: dune  test_validator.ml
obe/: GUIDE.md  README.md  STATUS.md  dune-project  obe.opam
obe/lib/: calendar.ml  checker.ml  config.ml  dune  formatter.ml  next_exercise.ml  parser.ml  progress.ml  scanner.ml  stats.ml
obe/test/: dune  test_integration.ml  test_obe.ml
scripts/: README.md  build-all.sh  prepare-exercises.sh  test-all.sh
text/: SUMMARY.md  appendix_a.md  appendix_b.md  appendix_c.md  appendix_d.md  appendix_e.md  appendix_f.md  chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapter09.md  chapter10.md  chapter10a.md  chapter10b.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter19.md  chapter20.md  chapter21.md  chapter22.md
theme/: highlight.js
(+196 files in other folders)
